# llmify

./: .env.example  .gitignore  LICENCE  README.md  main.py  pyproject.toml
.claude/: settings.local.json
.github/: ci.yaml
examples/: azure.py  hello_world.py  image_detection.py  openai.py  simple.py  streaming_tool_calls.py  structured_output.py  test_function_tool.py  test_mixed_tools.py  token_tracking.py  tool_calling.py  tool_calling_with_dict.py
examples/providers/: anthropic.py  azure.py  cerebras.py  google.py
examples/tools/: decorated_tool.py  raw_schema_tool.py
llmify/: __init__.py  base.py  exceptions.py  messages.py  port.py  service.py  tools.py  views.py
llmify/providers/: __init__.py  _base_openai.py  anthropic.py  antrophic.py  azure.py  base.py  cerebras.py  gemini.py  google.py  openai.py  openai_compatible.py
llmify/tokens/: __init__.py  costs.py  tracker.py  views.py
llmify/tools/: __init__.py  function.py
plans/: STREAMING_TOOL_CALLS.md
tests/: test_messages.py  test_openai_integration.py  test_params.py  test_providers.py
tests/providers/: test_anthropic_errors.py  test_anthropic_stream.py  test_cerebras.py  test_google.py  test_openai_compatible.py  test_openai_errors.py
tests/tokens/: test_costs.py  test_tracker.py
tests/tools/: test_function_tool.py  test_raw_schema_tool.py
