[project]
name = "py-llmify"
version = "0.2.0"
description = "A minimal, fast, and type-safe Python library for LLM chat completions with OpenAI and Azure OpenAI support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
openai = ["openai>=2.14.0"]
anthropic = ["anthropic>=0.86.0"]
all = ["openai>=2.14.0", "anthropic>=0.86.0"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
pythonpath = ["."]
